--- a/Lab1_YR.qmd
+++ b/Lab1_YR.qmd
@@ -34,6 +34,19 @@ Each row represents an individual listing.
 
 **Problem 3.** Pick one of the five boroughs of NYC (Manhattan, Queens, Brooklyn, the Bronx, or Staten Island), and create a faceted histogram where each facet represents a neighborhood in your chosen borough and displays the distribution of Airbnb prices in that neighborhood. Think critically about whether it makes more sense to stack the facets on top of each other in a column, lay them out in a row, or wrap them around. Along with your visualization, include your reasoning for the layout you chose for your facets.
 
+```{r}
+#| fig-height: 10
+#| fig-width: 12
+#| 
+brooklynbnb <- nycbnb %>% filter(borough == "Brooklyn")
+ggplot(data = brooklynbnb, 
+       aes(x = price)) +
+  geom_histogram(binwidth = 50)+
+  facet_wrap(~ neighborhood, scales = "free_y")
+```
+
+*Since there are a lot of neighborhoods I have decided to wrap them around which I believe makes it easier for comparison*.
+
 **Problem 4.** Use a single pipeline to identity the neighborhoods city-wide with the top five median listing prices that have a minimum of 50 listings. Then, in another pipeline filter the data for these five neighborhoods and make ridge plots of the distributions of listing prices in these five neighborhoods. In a third pipeline calculate the minimum, mean, median, standard deviation, IQR, and maximum listing price in each of these neighborhoods. Use the visualization and the summary statistics to describe the distribution of listing prices in the neighborhoods. (Your answer will include three pipelines, one of which ends in a visualization, and a narrative.)
 
 **Problem 5.** Create a visualization that will help you compare the distribution of review scores (`review_scores_rating`) across neighborhoods. You get to decide what type of visualization to create and which neighborhoods are most interesting to you, and there is more than one correct answer! In your answer, include a brief interpretation of how Airbnb guests rate properties in general and how the neighborhoods compare to each other in terms of their ratings.
